Trying to fix right pixel margin appearing on iphone 6 plus viewing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -438,7 +438,9 @@ footer {
 
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 640px), only screen and (max-device-width: 667px), 
+    only screen and (max-width: 480px) {
+  
   header {
     padding: 0px;
     position: static;
